After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757236 - libide: Fix parsing indent-tabs-mode in modelines
libide: Fix parsing indent-tabs-mode in modelines
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: libide
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-28 09:11 UTC by Philip Withnall
Modified: 2015-11-09 18:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libide: Fix parsing indent-tabs-mode in modelines (1.37 KB, patch)
2015-10-28 09:11 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2015-10-28 09:11:18 UTC
Trivial patch attached.
Comment 1 Philip Withnall 2015-10-28 09:11:22 UTC
Created attachment 314299 [details] [review]
libide: Fix parsing indent-tabs-mode in modelines

If a modeline contains (for example) ‘indent-tabs-mode: t’, libide was
explicitly setting IDE_INDENT_STYLE_SPACES. It was assuming that
MODELINE_SET_INSERT_SPACES being set meant that spaces were in use,
rather than the intended meaning of options.insert_spaces being
meaningful.
Comment 2 Christian Hergert 2015-10-28 18:01:24 UTC
Thanks!

Attachment 314299 [details] pushed as c203c47 - libide: Fix parsing indent-tabs-mode in modelines
Comment 3 Philip Withnall 2015-11-09 15:02:26 UTC
Would it be possible to backport this into 3.18.2? It’s a fairly annoying issue, and 3.18 is shipped in Fedora 23.
Comment 4 Christian Hergert 2015-11-09 18:42:26 UTC
I wasn't planning on doing a .2, but it doesn't seem outrageous to do one and add this.