libide: Fix parsing indent-tabs-mode in modelines

If a modeline contains (for example) ‘indent-tabs-mode: t’, libide was
explicitly setting IDE_INDENT_STYLE_SPACES. It was assuming that
MODELINE_SET_INSERT_SPACES being set meant that spaces were in use,
rather than the intended meaning of options.insert_spaces being
meaningful.

https://bugzilla.gnome.org/show_bug.cgi?id=757236